--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -100,7 +100,6 @@ div.try-nft-img img {
   height: auto;
 }
 
-
 div.nft-possibilities {
   z-index: 100;
   margin: 80px 0 auto;
@@ -140,3 +139,55 @@ div.nft-possibilities-img-right {
   font-size: 18px;
   margin: auto;
 }
+
+div.deliver-talent {
+  margin: 140px 100px 0 100px;
+  z-index: 1;
+  position: relative;
+  font-size: 36px;
+  font-weight: 600;
+  font-family: NxieOne,VarelaRound,Roboto,RobotoDraft,Helvetica,Arial,sans-serif;
+}
+
+div.deliver-talent-text {
+  position: absolute;
+  top: -30px;
+  left: 50%;
+  transform: translate(-50%, 0);
+}
+
+div.deliver-talent-img img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+div.scheme {
+  z-index: 100;
+  margin-top: 120px;
+  font-weight: 600;
+}
+
+div.scheme-title {
+  font-size: 42px;
+}
+
+div.scheme-text-box {
+  width: 1100px;
+  margin: 0 auto;
+}
+
+div.scheme-text {
+  font-size: 28px;
+  text-align: left;
+  width: 100%;
+}
+
+div.scheme-img {
+  margin-top: 80px;
+  z-index: 100;
+}
+div.scheme-img img {
+  width: 100%;
+}
+
