--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -191,3 +191,83 @@ div.scheme-img img {
   width: 100%;
 }
 
+div.merit {
+  z-index: 100;
+  margin-top: 120px;
+  font-weight: 600;
+}
+
+div.merit-title {
+  font-size: 42px;
+}
+
+div.merit-top-text p.blue-heading {
+  font-size: 36px;
+  color: #4169E1;
+  margin: 50px 0 0 0;
+}
+
+div.merit-top-text p {
+  font-size: 24px;
+  margin: 10px 0 0 0;
+}
+
+div.merit-img img {
+  width: 1100px;
+}
+
+div.merit-bottom-text p.red-heading {
+  font-size: 36px;
+  color: #E43E50;
+  margin: 50px 0 0 0;
+}
+
+div.merit-bottom-text p {
+  font-size: 24px;
+  margin: 10px 0 0 0;
+}
+
+div.member {
+  z-index: 100;
+  margin-top: 160px;
+  font-weight: 600;
+}
+
+div.member-title {
+  font-size: 42px;
+  font-family: NxieOne,VarelaRound,Roboto,RobotoDraft,Helvetica,Arial,sans-serif;
+}
+
+div.member-profiles {
+  display: flex;
+  margin: 10px 200px;
+}
+
+div.member-profiles div.profile {
+  width: 25%;
+  margin: 20px;
+}
+
+div.member-profiles div.profile img {
+  width: 100%;
+}
+
+div.member-profiles div.profile p.name {
+  font-size: 24px;
+  color: #000;
+  margin-bottom: 4px;
+}
+
+div.member-profiles div.profile p.position, div.member-profiles div.profile p.description {
+  font-size: 16px;
+  font-weight: normal;
+  margin: 10px 0 0 0;
+}
+
+div.member-text p {
+  font-size: 24px;
+}
+
+div.soon {
+  margin: 100px 0;
+}
